# NG_2025_Sokolov_Olexii

./: README.md
Lesson_1/Task_2/: .gitignore  CMakeLists.txt  main.cpp
